# MambaLens

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: Activation And Weight Plotter.ipynb  Activation Plotter Minimal.ipynb  Logit Lens.ipynb  Patching Minimal.ipynb  Patching.ipynb
hooked_mamba/: HookedMamba.py  __init__.py  hooked_mamba.py
mamba_lens/: HookedMamba.py  __init__.py  input_dependent_hooks.py
